--- a/.github/workflows/gradle_build.yml
+++ b/.github/workflows/gradle_build.yml
@@ -6,8 +6,12 @@ name: Build
 on:
   push:
     branches: [ main ]
+    paths-ignore: 
+    - ".github/**"
+    - "README.md"
   pull_request:
     branches: [ main ]
+  
 
 jobs:
   build:
